- fix AR not showing bug. (can't autoplay) - UA checks on iOS version and browsers

--- a/VRSite/src/sass/style.scss
+++ b/VRSite/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700");
+
 html,
 body {
   font-family: "Montserrat", arial, "Helvetica Neue", helvetica, sans-serif;
@@ -7,7 +8,7 @@ body {
   min-height: 100vh;
   overflow: hidden;
   position: fixed;
-  background-color: black;
+  background-color: #000000;
 }
 
 .preloader {
@@ -54,4 +55,32 @@ body {
 canvas {
   /* stylelint-disable-next-line */
   position: relative !important;
+}
+
+.start-con {
+  z-index: 9999999999;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100px;
+  height: 40px;
+  overflow: hidden;
+  transform: translateX(-50%) translateY(-50%);
+
+  .start-text {
+    height: 40px;
+    position: absolute;
+    padding: 10px 20px;
+    color: white;
+    text-align: center;
+    background-color: #001644;
+    pointer-events: none;
+    min-width: 100px;
+    box-sizing: border-box;
+  }
+
+  video {
+    width: 100px;
+    margin-top: -30px;
+  }
 }
